--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "commander": "^2.11.0",
     "lodash": "^4.17.4",
     "normalize.css": "^7.0.0",
-    "nuxt": "^1.0.0-rc11"
+    "nuxt": "^1.0.0-rc11",
+    "vue-highlightjs": "^1.3.3"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
