--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "preversion": "npm run build"
   },
   "dependencies": {
     "@nuxtjs/axios": "^4.2.1",
@@ -18,10 +19,13 @@
     "commander": "^2.11.0",
     "lodash": "^4.17.4",
     "normalize.css": "^7.0.0",
-    "nuxt": "^1.0.0-rc11",
+    "nuxt-start": "^1.0.0-rc11",
+    "sywac": "^1.2.0",
+    "update-notifier": "^2.2.0",
     "vue-highlightjs": "^1.3.3"
   },
   "devDependencies": {
+    "nuxt": "^1.0.0-rc11",
     "babel-eslint": "^7.2.3",
     "babel-plugin-lodash": "^3.2.11",
     "eslint": "^4.3.0",
