--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
   "dependencies": {
     "@nuxtjs/axios": "^4.2.1",
     "@nuxtjs/font-awesome": "^1.0.2",
+    "clone": "^2.1.1",
+    "core-js": "^2.5.1",
     "lodash": "^4.17.4",
     "normalize.css": "^7.0.0",
     "nuxt-start": "^1.0.0-rc11",
+    "regenerator-runtime": "^0.11.0",
     "sywac": "^1.2.0",
     "update-notifier": "^2.2.0",
-    "vue-highlightjs": "^1.3.3"
+    "vue-highlightjs": "^1.3.3",
+    "vue-router": "^2.7.0",
+    "vuex": "^2.4.1"
   },
   "devDependencies": {
     "nuxt": "^1.0.0-rc11",
