--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "bin": {
     "mono-doc": "./bin/mono-doc.js"
   },
+  "main": "lib/",
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
@@ -41,5 +45,9 @@
     "eslint-plugin-standard": "^3.0.1",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6"
-  }
+  },
+  "keywords": [
+    "mono",
+    "mono-module"
+  ]
 }
