--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "preversion": "npm run build"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^4.2.1",
-    "@nuxtjs/font-awesome": "^1.0.2",
+    "@nuxtjs/axios": "^4.5.2",
+    "@nuxtjs/font-awesome": "^1.0.3",
     "clone": "^2.1.1",
-    "core-js": "^2.5.1",
-    "lodash": "^4.17.4",
+    "core-js": "^2.5.3",
+    "lodash": "^4.17.5",
     "normalize.css": "^7.0.0",
-    "nuxt-start": "^1.0.0-rc11",
-    "regenerator-runtime": "^0.11.0",
+    "nuxt-start": "^1.0.0-rc9",
+    "regenerator-runtime": "^0.11.1",
     "sywac": "^1.2.0",
     "update-notifier": "^2.2.0",
     "vue-highlightjs": "^1.3.3",
@@ -32,18 +32,18 @@
     "vuex": "^2.4.1"
   },
   "devDependencies": {
-    "nuxt": "^1.0.0-rc11",
     "babel-eslint": "^7.2.3",
-    "babel-plugin-lodash": "^3.2.11",
-    "eslint": "^4.3.0",
+    "babel-plugin-lodash": "^3.3.2",
+    "eslint": "^4.18.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^3.1.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.7.2",
+    "nuxt": "^1.3.0",
     "sass-loader": "^6.0.6"
   },
   "keywords": [
