--- a/package.json
+++ b/package.json
@@ -17,19 +17,15 @@
     "preversion": "npm run build"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^4.5.2",
+    "@nuxtjs/axios": "^5.0.0",
     "@nuxtjs/font-awesome": "^1.0.3",
-    "clone": "^2.1.1",
-    "core-js": "^2.5.3",
+    "@nuxtjs/router": "^1.0.1",
     "lodash": "^4.17.5",
     "normalize.css": "^7.0.0",
-    "nuxt-start": "^1.0.0-rc9",
-    "regenerator-runtime": "^0.11.1",
+    "nuxt": "^1.3.0",
     "sywac": "^1.2.0",
     "update-notifier": "^2.2.0",
-    "vue-highlightjs": "^1.3.3",
-    "vue-router": "^2.7.0",
-    "vuex": "^2.4.1"
+    "vue-highlightjs": "^1.3.3"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
@@ -43,7 +39,6 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "node-sass": "^4.7.2",
-    "nuxt": "^1.3.0",
     "sass-loader": "^6.0.6"
   },
   "keywords": [
