--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "name": "mono-doc",
   "version": "0.6.0",
-  "bin": {
-    "mono-doc": "./bin/mono-doc.js"
-  },
+  "description": "API Documentation module for Mono",
   "main": "lib/",
   "files": [
     "lib"
@@ -16,6 +14,22 @@
     "precommit": "npm run lint",
     "preversion": "npm run build"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/terrajs/mono-doc.git"
+  },
+  "contributors": [
+    {
+      "name": "Sebastien Chopin (@Atinux)"
+    },
+    {
+      "name": "Benjamin Canac (@benjamincanac)"
+    },
+    {
+      "name": "Gaetan SENN (@gaetansenn)"
+    }
+  ],
+  "license": "MIT",
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
     "@nuxtjs/font-awesome": "^1.0.3",
@@ -43,6 +57,8 @@
   },
   "keywords": [
     "mono",
-    "mono-module"
+    "mono-module",
+    "mono-doc",
+    "doc"
   ]
 }
