--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vue-highlightjs": "^1.3.3"
   },
   "devDependencies": {
+    "@terrajs/mono": "^0.8.0",
     "babel-eslint": "^7.2.3",
     "babel-plugin-lodash": "^3.3.2",
     "eslint": "^4.18.1",
