--- a/package.json
+++ b/package.json
@@ -28,28 +28,21 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "nuxt": "^1.0.0",
     "@nuxtjs/axios": "^5.0.0",
     "@nuxtjs/font-awesome": "^1.0.3",
-    "@nuxtjs/router": "^1.0.1",
     "lodash": "^4.17.5",
     "normalize.css": "^7.0.0",
-    "nuxt": "^1.3.0",
-    "sywac": "^1.2.0",
-    "update-notifier": "^2.2.0",
     "vue-highlightjs": "^1.3.3"
   },
   "devDependencies": {
     "@terrajs/mono": "^0.8.0",
-    "babel-eslint": "^7.2.3",
+    "cross-env": "^5.0.1",
+    "babel-eslint": "^8.2.1",
     "babel-plugin-lodash": "^3.3.2",
-    "eslint": "^4.18.1",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^3.1.1",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
+    "eslint": "^4.15.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-vue": "^4.0.0",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6"
   },
